examples/errors/parsing/refined_fun-rfun-no-arrow.rcn
rfun identity (x : Int) (y : Int) [pure] =
  (x) : (y : Int)
main : (r : Int) [pure] = identity(42) : (r : Int)
